# bindcurve

./: .gitignore  CITATION.cff  MANIFEST.in  README.md  architecture.md  calculate.py  data.py  data_formats.md  models.py  pyproject.toml  setup.py  synthetic_competitive_binding_long.csv  synthetic_competitive_binding_replicate_wide.csv  synthetic_direct_binding_long.csv  synthetic_direct_binding_replicate_wide.csv  test.ipynb  test.py
.github/workflows/: docs.yml  lint.yml  publish.yml  python-publish.yml  release.yml  tests.yml
algebra/: derive_four_state.ipynb  derive_four_state_r_equivalent_coefficients.ipynb  derive_four_state_r_equivalent_coefficients.py
algebra/.ipynb_checkpoints/: quintic_coefficients-checkpoint.ipynb  quintic_roots-checkpoint.ipynb
bindcurve/: __init__.py  calculate.py  data.py  models.py  quality.py
bindcurve/conversion/: __init__.py  ic50.py
bindcurve/datasets/: __init__.py  dose_response.py  quality.py
bindcurve/fitting/: __init__.py  calculator.py  settings.py
bindcurve/modeling/: __init__.py  base.py  binding.py  competitive.py  direct.py  four_state.py  guesses.py  logistic.py  parameters.py  registry.py  three_state.py
bindcurve/plotting/: __init__.py  annotations.py  common.py  compound_summary.py  confidence.py  curves.py  fits.py  observations.py  quality.py
bindcurve/results/: __init__.py  core.py  quality.py  reporting.py  types.py
docs/: _quarto.yml  about.qmd  api.html  basics.html  conf.py  getting-started.md  getting_started.html  index.html  index.md  index.qmd  input_format.html  models.html  models.qmd  objects.json  search.json  symbols.html  symbols.qmd  theory.qmd  theory_conversions.html  theory_conversions.qmd  theory_exact.html  theory_exact.qmd  theory_logistic.html
docs/_site/: about.html  getting_started.html  index.html  input_format.html  models.html  search.json  symbols.html  theory.html  theory_conversions.html  theory_exact.html  theory_logistic.html
docs/api/: conversion.md  data-fitting.md  index.md  modeling.md  plotting.md  results-quality.md
docs/reference/: convert.html  fit_50.html  fit_Kd_competition.html  fit_Kd_direct.html  fit_Kd_direct.qmd  index.html  index.qmd  plot.html  (+7 more)
docs_sphinx/: bindcurve.rst  conf.py  modules.rst  newpage.rst
examples/: competitive.csv
pages/: api.html  models.html  search.json  theory_conversions.html
quarto_website/: _quarto.yml  symbols.qmd
tests/: test_competitive_binding_models.py  test_competitive_four_state_models.py  test_data_formats.py  test_direct_binding_models.py  test_documentation_api.py  test_fitting_and_data_contracts.py  test_four_state_mass_balance_validation.py  test_ic50_conversion.py  test_ic50_skeleton.py  test_logistic_models.py  test_model_evaluation_api.py  test_plotting.py  test_public_api.py  test_quality_dashboards.py  test_quality_reports.py  test_results_reporting.py  test_scientific_model_validation.py  test_strategy_and_io.py
tutorials/: 00_basics.ipynb  01_ic50_models.ipynb  02_direct_kd_models.ipynb  03_competitive_kd_models.ipynb  04_plotting.ipynb  05_plotting_components.ipynb  06_galectin.ipynb  07_data_handling.ipynb  README.md
(+69 files in other folders)
