[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "bindcurve"
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "matplotlib",
  "lmfit",
]
description = "A Python package for fitting and plotting dose-response and binding curves."
readme = "README.md"
authors = [
  {name = "Jan Choutka", email = "jan.choutka@uochb.cas.cz"},
]
license = "MIT"

[project.optional-dependencies]
test = [
  "pytest",
  "scipy",
]

[tool.setuptools_scm]

[tool.setuptools.packages.find]
include = ["bindcurve*"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
